GNOME Bugzilla – Bug 752042
xvimagesink: fix pad memory leak
Last modified: 2015-08-16 13:39:54 UTC
pad is not being freed when xwindow is not created
Created attachment 306966 [details] [review] fix pad memory leak
Thanks, pushed: commit cf454ca71358ca6f7d412488d98e27dd31d1bb18 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Tue Jul 7 09:31:01 2015 +0900 xvimagesink: fix pad memory leak pad is not being freed when xwindow is not created https://bugzilla.gnome.org/show_bug.cgi?id=752042