xvimagesink: fix pad memory leak

pad is not being freed when xwindow is not created

https://bugzilla.gnome.org/show_bug.cgi?id=752042